--- a/house.gov.by/3c84851aacd98293a2e688314ec0dc4e23fb97e1.yml
+++ b/house.gov.by/3c84851aacd98293a2e688314ec0dc4e23fb97e1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 22:43:39 GMT
+    - Sat, 04 Nov 2017 16:01:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=bgq198tdj3hqm29a0v2005l254; path=/
+    - PHPSESSID=hocsgi7298pnn67reqrgvgbqn3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 22:43:41 GMT
+recorded_at: Sat, 04 Nov 2017 16:01:43 GMT
