--- a/house.gov.by/926c98f652fe842fdc133d493ebc3221651e44da.yml
+++ b/house.gov.by/926c98f652fe842fdc133d493ebc3221651e44da.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 22:47:17 GMT
+    - Sat, 04 Nov 2017 16:06:26 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=qd554pa497o8u2bt5hudp7b4l2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 22:47:17 GMT
+recorded_at: Sat, 04 Nov 2017 16:06:26 GMT
