--- a/house.gov.by/cfd30729c5aa2b5af72e0e2251bb4620a2d190bb.yml
+++ b/house.gov.by/cfd30729c5aa2b5af72e0e2251bb4620a2d190bb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 22:49:13 GMT
+    - Sat, 04 Nov 2017 16:08:00 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=jssf91v8q6n293dfmcp376sk54; path=/
+    - PHPSESSID=qu5s9br0eoenscr4kt12d8e917; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 22:49:14 GMT
+recorded_at: Sat, 04 Nov 2017 16:08:02 GMT
