--- a/house.gov.by/aedc7433780d2dbe5c3fa712fc02d9c1ddeda178.yml
+++ b/house.gov.by/aedc7433780d2dbe5c3fa712fc02d9c1ddeda178.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 23:16:57 GMT
+    - Sat, 04 Nov 2017 16:37:18 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=mlpk094t33rpb9b1o7vi9q0pv0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 23:16:58 GMT
+recorded_at: Sat, 04 Nov 2017 16:37:18 GMT
