--- a/house.gov.by/03666e2052194ccd0d620d67ad9c3b5b50e78b2a.yml
+++ b/house.gov.by/03666e2052194ccd0d620d67ad9c3b5b50e78b2a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 23:18:00 GMT
+    - Sat, 04 Nov 2017 16:38:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=iirost1h3r8josr1n0t6qgcd85; path=/
+    - PHPSESSID=jt5h80hm2n757hfch1c83bi4h3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 23:18:01 GMT
+recorded_at: Sat, 04 Nov 2017 16:38:16 GMT
