--- a/house.gov.by/60249ac0ab8af23b7af7ee29503a44f7985e4de9.yml
+++ b/house.gov.by/60249ac0ab8af23b7af7ee29503a44f7985e4de9.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 23:18:41 GMT
+    - Sat, 04 Nov 2017 16:38:55 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=1g2e67jgnejaihm78ijfjbakr3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 23:18:42 GMT
+recorded_at: Sat, 04 Nov 2017 16:38:55 GMT
