--- a/house.gov.by/5bdaea91a3c0d6e18ed92838051a80b32621108b.yml
+++ b/house.gov.by/5bdaea91a3c0d6e18ed92838051a80b32621108b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 23:23:00 GMT
+    - Sat, 04 Nov 2017 16:40:27 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=09irunpb7mgoa9ip5uphneh300; path=/
+    - PHPSESSID=1i6rfkjkpkqd3qf75919m899s4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 23:23:02 GMT
+recorded_at: Sat, 04 Nov 2017 16:40:29 GMT
