--- a/house.gov.by/29d706cd0fcf9ac1ab414c688071538d3289280b.yml
+++ b/house.gov.by/29d706cd0fcf9ac1ab414c688071538d3289280b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 23:38:56 GMT
+    - Sat, 04 Nov 2017 16:57:50 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=bns4m62uft2br4slnqohv86vq2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 23:38:58 GMT
+recorded_at: Sat, 04 Nov 2017 16:57:50 GMT
