--- a/house.gov.by/27f645764041e2ea742a0d370054612f1b6469d8.yml
+++ b/house.gov.by/27f645764041e2ea742a0d370054612f1b6469d8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 23:58:21 GMT
+    - Sat, 04 Nov 2017 17:14:07 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=erc0t6ijorctn8stlv6me8e7f0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 23:58:21 GMT
+recorded_at: Sat, 04 Nov 2017 17:14:08 GMT
