--- a/house.gov.by/d6c0193ed9febfe1de1dc6d2e0b529dd922b22e1.yml
+++ b/house.gov.by/d6c0193ed9febfe1de1dc6d2e0b529dd922b22e1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 02 Nov 2017 00:13:52 GMT
+    - Sat, 04 Nov 2017 17:32:57 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=j9ccum041mg5unfak8dla358k1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 02 Nov 2017 00:13:52 GMT
+recorded_at: Sat, 04 Nov 2017 17:32:59 GMT
