--- a/house.gov.by/daaa73805e9fe148233c94c1671cd7492cf1b742.yml
+++ b/house.gov.by/daaa73805e9fe148233c94c1671cd7492cf1b742.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 02 Nov 2017 00:17:20 GMT
+    - Sat, 04 Nov 2017 17:37:36 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=7jvmpmmla8fnp93oqs61r51ht4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - UPDATING
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 02 Nov 2017 00:17:20 GMT
+recorded_at: Sat, 04 Nov 2017 17:37:36 GMT
