--- a/house.gov.by/112adc08aa09be034f549c3a1c75bccb1324aeec.yml
+++ b/house.gov.by/112adc08aa09be034f549c3a1c75bccb1324aeec.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 17:29:36 GMT
+    - Sat, 04 Nov 2017 17:54:01 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=cinodk24mbqkc4i3btmgf1t745; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 17:29:36 GMT
+recorded_at: Sat, 04 Nov 2017 17:54:01 GMT
