--- a/house.gov.by/9b7e469bdec8b21f2c71544f7842ecc616e25cf7.yml
+++ b/house.gov.by/9b7e469bdec8b21f2c71544f7842ecc616e25cf7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 16:31:10 GMT
+    - Sat, 04 Nov 2017 17:56:25 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=va532motl7cui9ut5bp6j5ddd2; path=/
+    - PHPSESSID=megrpde4rvjjrntpg2g8llavn5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 16:31:11 GMT
+recorded_at: Sat, 04 Nov 2017 17:56:25 GMT
