--- a/house.gov.by/aedc7433780d2dbe5c3fa712fc02d9c1ddeda178.yml
+++ b/house.gov.by/aedc7433780d2dbe5c3fa712fc02d9c1ddeda178.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 16:37:18 GMT
+    - Sat, 04 Nov 2017 18:19:02 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=kj1ec81ev0d94i3al9v6v7nme1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 16:37:18 GMT
+recorded_at: Sat, 04 Nov 2017 18:19:03 GMT
