--- a/house.gov.by/9f2be3c31ad3be4c56000ccfcf1f5aae503958b5.yml
+++ b/house.gov.by/9f2be3c31ad3be4c56000ccfcf1f5aae503958b5.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 17:17:25 GMT
+    - Sat, 04 Nov 2017 18:37:24 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=r3l1iki4d1g0s62qcidpe82s31; path=/
+    - PHPSESSID=1jv25i951m66vmjtfi565i1l10; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 17:17:25 GMT
+recorded_at: Sat, 04 Nov 2017 18:37:24 GMT
